--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: green;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: rgb(0, 151, 0);
 }
 
 body {
@@ -39,7 +39,8 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 1.2em 0.5em 1.2em;
+
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -48,7 +49,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: green;
 }
 button:focus,
 button:focus-visible {
@@ -61,7 +62,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: rgb(63, 180, 1);
   }
   button {
     background-color: #f9f9f9;
